kustomize/overlays/local/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Never
