kustomize/overlays/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          image: devops-app:local
