kustomize/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: local-my-api
                port:
                  number: 80
